<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/admin_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/image_menu"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:layout_gravity="center_vertical"
                            android:onClick="showMenu"
                            android:src="@drawable/ic_menu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:paddingVertical="18dp"
                            android:paddingLeft="8dp"
                            android:text="Administración"
                            android:textColor="@android:color/white"
                            android:textSize="24dp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </android.support.v7.widget.Toolbar>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_users"
                        android:tint="@color/grey" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorPrimaryLight"
                        android:elevation="18dp"
                        android:fontFamily="@font/roboto_medium"
                        android:onClick="gestionarUsuarios"
                        android:padding="16dp"
                        android:text="Gestión de Usuarios"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_beds"
                        android:tint="@color/grey" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorPrimaryLight"
                        android:elevation="18dp"
                        android:fontFamily="@font/roboto_medium"
                        android:onClick="gestionarCamas"
                        android:padding="16dp"
                        android:text="Gestión de camas"
                        android:textSize="20dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_graphic"
                        android:tint="@color/grey" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:background="@color/colorPrimaryLight"
                        android:elevation="18dp"
                        android:fontFamily="@font/roboto_medium"
                        android:onClick="visualizarCamas"
                        android:padding="16dp"
                        android:text="Visualización de camas"
                        android:textSize="20dp" />
                </LinearLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/admin_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="100dp"/>

        </RelativeLayout>
    </ScrollView>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/navigation_header"
        app:itemBackground="@android:color/transparent"
        app:menu="@menu/menu_navigation" />
</android.support.v4.widget.DrawerLayout>