...
                android:layout_height="match_parent"
                android:background="@color/background"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/beds_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="?attr/colorPrimary"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme">
...
